--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "parcel": "^2.10.3"
   },
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.10.3",
+    "@parcel/transformer-webmanifest": "^2.10.3",
     "tailwindcss": "^3.3.5"
   }
 }
